# store-credit-aggregator

./: .gitignore  CLAUDE.md  README.md  cli.py  config.py  credit-checker-prompt.md  diagnose.py  pyproject.toml
scrapers/: __init__.py  base.py  eacollectibles.py  manalounge.py  playerscandc.py  realmhoppers.py
