[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "store-credit-aggregator"
version = "1.0.0"
description = "Check TCG store credit balances from the command line"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "rich>=13.0.0",
]

[project.scripts]
store-credit = "cli:run"

[tool.setuptools]
py-modules = ["cli", "config"]
packages = ["scrapers"]
